syntax = "proto3";

option go_package = "./;proto"; // Adjust this path accordingly
package raftkv;

service KeyValueStore {
    rpc Put(KeyValue) returns (Reply) {};
}

message KeyValue {
    string key = 1;
    string value = 2;
    int64 ClientId = 3;
    int64 RequestId = 4;
}

message Reply {
    bool wrongLeader = 1;
    string error = 2;
    string value = 3;
}
