syntax = "proto3";

option go_package = "./;proto"; // Adjust this path accordingly
package raftkv;

service KeyValueStore {
    rpc ClientHeartbeat(StringArg) returns (Reply) {};
}

message Reply {
    bool wrongLeader = 1;
    string error = 2;
    string value = 3;
}

message StringArg {
    string arg = 1;
}
